[package]
name = "challenge-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart-extract = "0.1.5"
actix-web = "4"
backon = "0.4.0"
bytes = "1.3.0"
celery = "0.5.3"
chrono = "0.4.24"
common = { path = "../common" }
derive_more = "0.99.17"
diesel = { version = "2", features = ["postgres", "uuid", "r2d2", "chrono"] }
dotenv = "0.15"
env_logger = "0.10"
exploit-builder = { path = "../exploit-builder" }
flate2 = "1.0.26"
google-cloud-default = { version = "0.2.0", features = ["storage"] }
google-cloud-storage = "0.11.0"
hmac = "0.12.1"
jwt = "0.16.0"
log = "0.4.17"
object_store = { version = "0.5.6", features = ["aws", "azure", "gcp"] }
r2d2 = "0.8.10"
redis = { version = "0.23", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.6"
tar = "0.4.38"
uuid = { version = "1", features = ["v4", "serde"] }
