[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "uuid", "r2d2", "chrono"] }
diesel_migrations = "2.0.0"
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
diesel-derive-newtype = "2.0.0-rc.0"
log = "0.4.17"
object_store = { version = "0.5.6", features = ["aws", "azure", "gcp"] }
r2d2 = "0.8.10"
serde = "1.0.152"
uuid = { version = "1", features = ["v4", "serde"] }
