[package]
name = "score-reporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
diesel = { version = "2", features = ["postgres", "uuid", "r2d2", "chrono"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4.17"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
